--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stream-chat": "^1.7.2"
   },
   "scripts": {
+    "build": "netlify-lambda build",
     "postinstall": "netlify-lambda install"
   }
 }
