--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "stream-chat": "^1.7.2"
   },
   "scripts": {
-    "build": "netlify-lambda build src",
+    "build": "netlify-lambda build src/functions --config webpack.functions.js",
     "postinstall": "netlify-lambda install"
+  },
+  "devDependencies": {
+    "babel-loader": "^8.1.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
