--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stream-chat": "^1.7.2"
   },
   "scripts": {
+    "start": "netlify-lambda serve src/lambda --config webpack.functions.js",
     "build": "netlify-lambda build src/functions --config webpack.functions.js",
     "postinstall": "netlify-lambda install"
   },
